--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/cineamas_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=create
 
+server.servlet.context-path=/api
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
