add header component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ server.servlet.context-path=/api
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.format_sql=true
+
+
+#spring.mail.host="smtp.mailtrap.io"
+#spring.mail.port=5555
+#spring.mail.protocol=smtp
+#spring.mail.username="fa9cf48163fa23"
+#spring.mail.password="607b7d19fe8e66"
